test/commands/scan/tf-s3/kyverno-test.yaml
apiVersion: json.kyverno.io/v1alpha1
kind: Tests
metadata:
  name: kyverno-test.yaml
tests:
- policies:
  - policy.yaml
  payload: payload.json
  preprocess:
  - planned_values.root_module.resources
  result: error
